% Links to vignettes 20220723
\newcommand{\viglink}{\ifelse{html}{\out{<a href="../CHNOSZ/doc/#1.html"><strong>#1.Rmd</strong></a>}}{\bold{#1.Rmd}}}
% Heat capacity and standard Gibbs energy 20231115
\newcommand{\Cp}{\ifelse{latex}{\eqn{C_P}}{\ifelse{html}{\out{<I>C<sub>P</sub></I>}}{Cp}}}
\newcommand{\DG0}{\ifelse{latex}{\eqn{{\Delta}G^{\circ}}}{\ifelse{html}{\out{&Delta;<I>G</I>&deg;}}{ΔG°}}}

\section{Changes in CHNOSZ version 2.2.0 (2025-06-20)}{

  \subsection{OBIGT DATABASE FORMAT}{
    \itemize{

      \item Mineral species whose \code{T} value is a Cp equation limit or
      phase transition temperature are indicated by \samp{CGL} or
      \samp{CGL_Ttr}, respectively, in \code{model}. At temperatures above the
      \code{T} limit, \code{subcrt()} extrapolates values and produces a
      warning for \samp{CGL} species or returns NA values for \samp{CGL_Ttr}
      species. The addition of \samp{CGL_Ttr} replaces the previous strategy of
      using signed values of \code{T}.

    }
  }

  \subsection{OBIGT DEFAULT DATA}{
    \itemize{

      \item Add tantalum species from
      \href{https://doi.org/10.1016/j.gca.2024.10.019}{Hu et al. (2024)}.

      \item Add germanium, indium, gallium, and cadmium minerals and aqueous
      species from the compilation of
      \href{https://doi.org/10.1080/08120099.2024.2423772}{Huston and Bastrakov
        (2024)}. Move Cd and In chloride, In fluoride, and Ga hydroxide
      complexes from \href{https://doi.org/10.1016/S0016-7037(96)00339-0}{Shock
        et al. (1997)} and
      \href{https://doi.org/10.1016/S0016-7037(97)00009-4}{Sverjensky et al.
        (1997)} to optional data. Thanks to Evgeniy Bastrakov for providing
      data files for these species and for Co, Ta, Nb, U, and REE minerals and
      uranyl complexes mentioned below.

      \item Add palladium and platinum hydrosulfide complexes
      (Pd(HS)\s{4}\S{-2} and Pt(HS)\s{4}\S{-2}) from